--- a/css/styles.css
+++ b/css/styles.css
@@ -347,9 +347,9 @@ p {
   display: inline-flex;
   justify-content: center;
   flex-shrink: 0;
-  gap: 120px;
 }
 .footer-sm {
+  padding-left: 120px;
   display: block;
   flex-direction: column;
 }
@@ -366,6 +366,7 @@ p {
   align-items: flex-start;
   gap: 16px;
 }
+
 .sm-icons {
   background-color: var(--iris);
   border-radius: 50%;
@@ -397,7 +398,7 @@ p {
   padding: 12px 24px;
   align-items: center;
   border-radius: 4px;
-  border: 1px solid var(--cornflower, #e7e9fc);
+  border: none;
   color: var(--iris, #4d5ae5);
   line-height: 1.5;
   font-size: 16px;
