--- a/css/styles.css
+++ b/css/styles.css
@@ -70,7 +70,7 @@ header {
   line-height: 1.16;
   letter-spacing: 0.54px;
   text-transform: uppercase;
-  padding-right: 76px;
+  padding-right: 36px;
 }
 
 .navi-link a {
@@ -281,6 +281,9 @@ p {
 .team-sm:focus {
   background-color: var(--ocean, #404bbf);
 }
+.team-sm:hover {
+  cursor: pointer;
+}
 
 /* studio - sekcja Customers */
 .customers {
@@ -292,27 +295,25 @@ p {
 }
 
 .customers-icons {
+  fill: #8e8f99;
   width: 168px;
   height: 88px;
   flex-shrink: 0;
+  padding: 16px 32px;
   border-radius: 4px;
   border: 1px solid var(--lightslate, #8e8f99);
 }
-.customers-icons-item {
-  fill: #8e8f99;
-  width: 104px;
-  height: 56px;
-  flex-shrink: 0;
-  margin: 16px 32px;
-}
-.customers-icons-item:hover,
-.customers-icons-item:focus {
-  fill: #404bbf;
-}
+
 .customers-icons:focus,
 .customers-icons:hover {
-  border: 1px solid #404bbf;
+  border-color: var(--ocean);
+  fill: var(--ocean);
 }
+
+.customers-icons:hover {
+  cursor: pointer;
+}
+
 /* Stopka */
 .footer-class {
   background-color: var(--navy-blue, #2e2f42);
@@ -379,9 +380,13 @@ p {
   width: 24px;
   height: 24px;
 }
+
 .sm-icons:focus,
 .sm-icons:hover {
   background-color: var(--green, #31d0aa);
+}
+.sm-icons:hover {
+  cursor: pointer;
 }
 
 /* portfolio - sekcja nawigacji*/
@@ -392,7 +397,6 @@ p {
   gap: 24px;
   padding-top: 96px;
   padding-bottom: 72px;
-  margin: -120px auto;
 }
 .navi-button button {
   display: flex;
@@ -417,11 +421,15 @@ p {
   box-shadow: 0px 2px 2px 0px rgba(0, 0, 0, 0.12),
     0px 2px 1px 0px rgba(0, 0, 0, 0.08), 0px 3px 1px 0px rgba(0, 0, 0, 0.1);
 }
+.navi-button:hover {
+  cursor: pointer;
+}
 /* portfolio - sekcja projekt*/
 
 .project {
   display: flex;
   gap: 24px;
+  padding-bottom: 120px;
 }
 
 .project-name {
@@ -433,14 +441,16 @@ p {
   border-right: 1px solid var(--cornflower, #e7e9fc);
   background: var(--white, #fff);
 }
-.project-name:hover {
+.project-name:hover,
+.project-name:focus {
   box-shadow: 0px 2px 1px 0px rgba(46, 47, 66, 0.08),
     0px 1px 1px 0px rgba(46, 47, 66, 0.16),
     0px 1px 6px 0px rgba(46, 47, 66, 0.08);
 }
-.project-margin {
-  margin-top: -120px;
+.project-name:hover {
+  cursor: pointer;
 }
+
 .project-box {
   padding-bottom: 48px;
   display: flex;
