--- a/css/styles.css
+++ b/css/styles.css
@@ -424,7 +424,7 @@ p {
 .navi-button:hover {
   cursor: pointer;
 }
-/* portfolio - sekcja projekt*/
+/* portfolio - projekty */
 
 .project {
   display: flex;
